--- a/miniutter.cabal
+++ b/miniutter.cabal
@@ -39,3 +39,21 @@ library
   ghc-options:        -Wall -fwarn-orphans -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -fwarn-unrecognised-pragmas
   ghc-options:        -fno-warn-auto-orphans -fno-warn-implicit-prelude
   ghc-options:        -fno-ignore-asserts -funbox-strict-fields
+
+test-suite test-miniutter
+  type:               exitcode-stdio-1.0
+  main-is:            test-miniutter.hs
+  hs-source-dirs:     test
+  build-depends:      miniutter,
+                      base == 4.*,
+                      text,
+                      test-framework       >= 0.6 && < 0.7,
+                      test-framework-hunit >= 0.2 && < 0.3,
+                      HUnit                >= 1.2 && < 1.3
+
+  default-language:   Haskell2010
+  default-extensions: MonoLocalBinds,
+                      BangPatterns, RecordWildCards, NamedFieldPuns
+  ghc-options:        -Wall -fwarn-orphans -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -fwarn-unrecognised-pragmas
+  ghc-options:        -fno-warn-auto-orphans -fno-warn-implicit-prelude
+  ghc-options:        -fno-ignore-asserts -funbox-strict-fields
