--- a/miniutter.cabal
+++ b/miniutter.cabal
@@ -29,14 +29,15 @@ source-repository head
 library
   exposed-modules:    NLP.Miniutter.English
 --  other-modules:
-  build-depends:      base == 4.*,
-                      minimorph,
-                      text,
-                      containers >= 0.4.1 && < 1
+  build-depends:      base                 >= 4     && < 5,
+                      text                 >= 0.11.2.3 && < 1,
+                      containers           >= 0.4.1 && < 1,
+                      minimorph            >= 0.1.3 && < 1
 
   default-language:   Haskell2010
   default-extensions: MonoLocalBinds,
                       BangPatterns, RecordWildCards, NamedFieldPuns
+  other-extensions:   OverloadedStrings, ExtendedDefaultRules
   ghc-options:        -Wall -fwarn-orphans -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -fwarn-unrecognised-pragmas
   ghc-options:        -fno-warn-auto-orphans -fno-warn-implicit-prelude
   ghc-options:        -fno-ignore-asserts -funbox-strict-fields
@@ -46,16 +47,17 @@ test-suite test-miniutter
   main-is:            test-miniutter.hs
   hs-source-dirs:     test
   build-depends:      miniutter,
-                      base == 4.*,
-                      text,
+                      base                 >= 4     && < 5,
+                      text                 >= 0.11.2.3 && < 1,
                       containers           >= 0.4.1 && < 1,
-                      test-framework       >= 0.6   && < 0.7,
-                      test-framework-hunit >= 0.2   && < 0.3,
-                      HUnit                >= 1.2   && < 1.3
+                      test-framework       >= 0.6   && < 1,
+                      test-framework-hunit >= 0.2   && < 1,
+                      HUnit                >= 1.2   && < 2
 
   default-language:   Haskell2010
   default-extensions: MonoLocalBinds,
                       BangPatterns, RecordWildCards, NamedFieldPuns
+  other-extensions:   OverloadedStrings, ExtendedDefaultRules
   ghc-options:        -Wall -fwarn-orphans -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -fwarn-unrecognised-pragmas
   ghc-options:        -fno-warn-auto-orphans -fno-warn-implicit-prelude
   ghc-options:        -fno-ignore-asserts -funbox-strict-fields
