--- a/miniutter.cabal
+++ b/miniutter.cabal
@@ -1,12 +1,12 @@
 name:          miniutter
-version:       0.2.0
+version:       0.4.0
 synopsis:      Simple English clause creation from arbitrary words.
 description:   This library helps in generating simple present tense
                English sentences from short, parametrized descriptions.
                In a typical use, the structure of a clause is fixed,
                but the particular words to be used vary in arbitrary ways.
                The main goal of the library is to minimize the API
-               complexity and the code size of programs using it.
+               complexity and the code size of programs that use it.
                The library doesn't attempt to ban incorrect English sentences,
                but just make the creation of the simple correct ones easy
                and predictable.
@@ -32,7 +32,7 @@ library
   build-depends:      base                 >= 4     && < 5,
                       text                 >= 0.11.2.3 && < 1,
                       containers           >= 0.4.1 && < 1,
-                      minimorph            >= 0.1.3 && < 1
+                      minimorph            >= 0.1.4 && < 1
 
   default-language:   Haskell2010
   default-extensions: MonoLocalBinds,
