--- a/miniutter.cabal
+++ b/miniutter.cabal
@@ -29,15 +29,17 @@ source-repository head
 library
   exposed-modules:    NLP.Miniutter.English
 --  other-modules:
-  build-depends:      base                 >= 4     && < 5,
+  build-depends:      base                 >= 4        && < 5,
+                      binary               >= 0.6.3.0  && < 1,
+                      ghc-prim             >= 0.2,
                       text                 >= 0.11.2.3 && < 1,
-                      containers           >= 0.4.1 && < 1,
-                      minimorph            >= 0.1.4 && < 1
+                      containers           >= 0.4.1    && < 1,
+                      minimorph            >= 0.1.4    && < 1
 
   default-language:   Haskell2010
-  default-extensions: MonoLocalBinds,
+  default-extensions: MonoLocalBinds, ScopedTypeVariables,
                       BangPatterns, RecordWildCards, NamedFieldPuns
-  other-extensions:   OverloadedStrings, ExtendedDefaultRules
+  other-extensions:   OverloadedStrings, DeriveGeneric
   ghc-options:        -Wall -fwarn-orphans -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -fwarn-unrecognised-pragmas
   ghc-options:        -fno-warn-auto-orphans -fno-warn-implicit-prelude
   ghc-options:        -fno-ignore-asserts -funbox-strict-fields
@@ -47,17 +49,17 @@ test-suite test-miniutter
   main-is:            test-miniutter.hs
   hs-source-dirs:     test
   build-depends:      miniutter,
-                      base                 >= 4     && < 5,
+                      base                 >= 4        && < 5,
                       text                 >= 0.11.2.3 && < 1,
-                      containers           >= 0.4.1 && < 1,
-                      test-framework       >= 0.6   && < 1,
-                      test-framework-hunit >= 0.2   && < 1,
-                      HUnit                >= 1.2   && < 2
+                      containers           >= 0.4.1    && < 1,
+                      test-framework       >= 0.6      && < 1,
+                      test-framework-hunit >= 0.2      && < 1,
+                      HUnit                >= 1.2      && < 2
 
   default-language:   Haskell2010
-  default-extensions: MonoLocalBinds,
+  default-extensions: MonoLocalBinds, ScopedTypeVariables,
                       BangPatterns, RecordWildCards, NamedFieldPuns
-  other-extensions:   OverloadedStrings, ExtendedDefaultRules
+  other-extensions:   OverloadedStrings
   ghc-options:        -Wall -fwarn-orphans -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -fwarn-unrecognised-pragmas
   ghc-options:        -fno-warn-auto-orphans -fno-warn-implicit-prelude
   ghc-options:        -fno-ignore-asserts -funbox-strict-fields
