--- a/miniutter.cabal
+++ b/miniutter.cabal
@@ -39,7 +39,8 @@ library
   default-language:   Haskell2010
   default-extensions: MonoLocalBinds, ScopedTypeVariables,
                       BangPatterns, RecordWildCards, NamedFieldPuns
-  other-extensions:   OverloadedStrings, DeriveGeneric
+  other-extensions:   OverloadedStrings
+--, DeriveGeneric
   ghc-options:        -Wall -fwarn-orphans -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -fwarn-unrecognised-pragmas
   ghc-options:        -fno-warn-auto-orphans -fno-warn-implicit-prelude
   ghc-options:        -fno-ignore-asserts -funbox-strict-fields
