--- a/miniutter.cabal
+++ b/miniutter.cabal
@@ -1,6 +1,6 @@
 name:          miniutter
 version:       0.4.2
-synopsis:      Simple English clause creation from arbitrary words.
+synopsis:      Simple English clause creation from arbitrary words
 description:   This library helps in generating simple present tense
                English sentences from short, parametrized descriptions.
                In a typical use, the structure of a clause is fixed,
@@ -14,7 +14,7 @@ homepage:      https://github.com/Mikolaj/miniutter
 bug-reports:   https://github.com/Mikolaj/miniutter/issues
 license:       BSD3
 license-file:  LICENSE
-tested-with:   GHC == 7.4.2, GHC == 7.6.1
+tested-with:   GHC == 7.4.2, GHC == 7.6.3
 extra-source-files: LICENSE, README.md
 author:        Mikolaj Konarski
 maintainer:    Mikolaj Konarski <mikolaj.konarski@funktory.com>
