--- a/miniutter.cabal
+++ b/miniutter.cabal
@@ -5,7 +5,7 @@ name:          miniutter
 -- PVP summary: +-+------- breaking API changes
 --              | | +----- non-breaking API additions
 --              | | | +--- code changes with no API change
-version:        0.4.4.2
+version:        0.4.5.0
 synopsis:      Simple English clause creation from arbitrary words
 description:   This library helps in generating simple present tense
                English sentences from short, parametrized descriptions.
@@ -20,7 +20,7 @@ homepage:      https://github.com/Mikolaj/miniutter
 bug-reports:   https://github.com/Mikolaj/miniutter/issues
 license:       BSD3
 license-file:  LICENSE
-tested-with:   GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8, GHC == 7.10
+tested-with:   GHC >= 7.4.2 && <= 8.2
 extra-source-files: LICENSE, README.md
 author:        Mikolaj Konarski
 maintainer:    Mikolaj Konarski <mikolaj.konarski@funktory.com>
@@ -40,7 +40,7 @@ library
                       ghc-prim             >= 0.2,
                       text                 >= 0.11.2.3 && < 2,
                       containers           >= 0.4.1    && < 1,
-                      minimorph            >= 0.1.4    && < 1
+                      minimorph            >= 0.1.6    && < 1
 
   default-language:   Haskell2010
   default-extensions: MonoLocalBinds, ScopedTypeVariables,
