--- a/miniutter.cabal
+++ b/miniutter.cabal
@@ -5,7 +5,7 @@ name:          miniutter
 -- PVP summary: +-+------- breaking API changes
 --              | | +----- non-breaking API additions
 --              | | | +--- code changes with no API change
-version:        0.4.6.0
+version:        0.4.7.0
 synopsis:      Simple English clause creation from arbitrary words
 description:   This library helps in generating simple present tense
                English sentences from short, parametrized descriptions.
@@ -20,7 +20,7 @@ homepage:      https://github.com/Mikolaj/miniutter
 bug-reports:   https://github.com/Mikolaj/miniutter/issues
 license:       BSD3
 license-file:  LICENSE
-tested-with:   GHC >= 7.4.2 && <= 8.2
+tested-with:   GHC >= 7.4.2 && <= 8.4
 extra-source-files: LICENSE, README.md
 author:        Mikolaj Konarski
 maintainer:    Mikolaj Konarski <mikolaj.konarski@funktory.com>
@@ -41,10 +41,12 @@ library
                       text                 >= 0.11.2.3 && < 2,
                       containers           >= 0.4.1    && < 1,
                       minimorph            >= 0.1.6    && < 1
+  if !impl(ghc >= 8.0)
+    build-depends: semigroups == 0.18.*
 
   default-language:   Haskell2010
   default-extensions: MonoLocalBinds, ScopedTypeVariables,
-                      BangPatterns, RecordWildCards, NamedFieldPuns
+                      BangPatterns, RecordWildCards, NamedFieldPuns, CPP
   other-extensions:   OverloadedStrings
 --, DeriveGeneric
   ghc-options:        -Wall -fwarn-orphans -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -fwarn-unrecognised-pragmas
@@ -62,10 +64,12 @@ test-suite test-miniutter
                       test-framework       >= 0.6      && < 1,
                       test-framework-hunit >= 0.2      && < 1,
                       HUnit                >= 1.2      && < 2
+  if !impl(ghc >= 8.0)
+    build-depends: semigroups == 0.18.*
 
   default-language:   Haskell2010
   default-extensions: MonoLocalBinds, ScopedTypeVariables,
-                      BangPatterns, RecordWildCards, NamedFieldPuns
+                      BangPatterns, RecordWildCards, NamedFieldPuns, CPP
   other-extensions:   OverloadedStrings
   ghc-options:        -Wall -fwarn-orphans -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -fwarn-unrecognised-pragmas
   ghc-options:        -fno-warn-implicit-prelude
