--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,19 @@
 dist
-cabal-dev
+dist-*
 *.o
 *.hi
 *.chi
 *.chs.h
-.virthualenv
+*.dyn_o
+*.dyn_hi
+.hsenv
+.cabal-sandbox/
+cabal.sandbox.config
+*.prof
+*.aux
+*.hp
+*.eventlog
+.stack-work/
+cabal.project.local
+.HTF/
+.ghc.environment*
