--- a/miniutter.cabal
+++ b/miniutter.cabal
@@ -21,7 +21,7 @@ bug-reports:   https://github.com/Mikolaj/miniutter/issues
 license:       BSD3
 license-file:  LICENSE
 tested-with:   GHC >= 7.4.2 && <= 8.4
-extra-source-files: LICENSE, README.md
+data-files:    LICENSE, README.md
 author:        Mikolaj Konarski
 maintainer:    Mikolaj Konarski <mikolaj.konarski@funktory.com>
 category:      Natural Language Processing
@@ -44,13 +44,17 @@ library
     build-depends: semigroups == 0.18.*
 
   default-language:   Haskell2010
-  default-extensions: MonoLocalBinds, ScopedTypeVariables,
-                      BangPatterns, RecordWildCards, NamedFieldPuns, CPP
+  if impl(ghc >= 8.0)
+  {
+  default-extensions: MonoLocalBinds, ScopedTypeVariables, OverloadedStrings
+                      BangPatterns, RecordWildCards, NamedFieldPuns, MultiWayIf,
+                      LambdaCase, DefaultSignatures, InstanceSigs,
+                      MonadFailDesugaring, StrictData, CPP
   other-extensions:   OverloadedStrings
---, DeriveGeneric
-  ghc-options:        -Wall -fwarn-orphans -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -fwarn-unrecognised-pragmas
-  ghc-options:        -fno-warn-implicit-prelude
-  ghc-options:        -fno-ignore-asserts -funbox-strict-fields
+  ghc-options:        -Wall -Wcompat -Worphans -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-home-modules -Widentities -Wredundant-constraints
+  ghc-options:        -Wall-missed-specialisations
+  ghc-options:        -fno-ignore-asserts -fexpose-all-unfoldings -fspecialise-aggressively
+  }
 
 test-suite test-miniutter
   type:               exitcode-stdio-1.0
@@ -67,9 +71,14 @@ test-suite test-miniutter
     build-depends: semigroups == 0.18.*
 
   default-language:   Haskell2010
-  default-extensions: MonoLocalBinds, ScopedTypeVariables,
-                      BangPatterns, RecordWildCards, NamedFieldPuns, CPP
+  if impl(ghc >= 8.0)
+  {
+  default-extensions: MonoLocalBinds, ScopedTypeVariables, OverloadedStrings
+                      BangPatterns, RecordWildCards, NamedFieldPuns, MultiWayIf,
+                      LambdaCase, DefaultSignatures, InstanceSigs,
+                      MonadFailDesugaring, StrictData, CPP
   other-extensions:   OverloadedStrings
-  ghc-options:        -Wall -fwarn-orphans -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -fwarn-unrecognised-pragmas
-  ghc-options:        -fno-warn-implicit-prelude
-  ghc-options:        -fno-ignore-asserts -funbox-strict-fields
+  ghc-options:        -Wall -Wcompat -Worphans -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-home-modules -Widentities -Wredundant-constraints
+  ghc-options:        -Wall-missed-specialisations
+  ghc-options:        -fno-ignore-asserts -fexpose-all-unfoldings -fspecialise-aggressively
+  }
