--- a/miniutter.cabal
+++ b/miniutter.cabal
@@ -53,6 +53,8 @@ library
   ghc-options:        -Wall -Wcompat -Worphans -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-home-modules -Widentities -Wredundant-constraints
   ghc-options:        -Wall-missed-specialisations
   ghc-options:        -fno-ignore-asserts -fexpose-all-unfoldings -fspecialise-aggressively
+  } else {
+  default-extensions: CPP
   }
 
 test-suite test-miniutter
