--- a/miniutter.cabal
+++ b/miniutter.cabal
@@ -53,7 +53,7 @@ library
   ghc-options:        -Wall-missed-specialisations
   ghc-options:        -fno-ignore-asserts -fexpose-all-unfoldings -fspecialise-aggressively
   } else {
-  default-extensions: CPP
+  default-extensions: CPP, NamedFieldPuns
   }
 
 test-suite test-miniutter
