And again fix cabal file for the case of old GHCs

--- a/miniutter.cabal
+++ b/miniutter.cabal
@@ -53,7 +53,7 @@ library
   ghc-options:        -Wall-missed-specialisations
   ghc-options:        -fno-ignore-asserts -fexpose-all-unfoldings -fspecialise-aggressively
   } else {
-  default-extensions: CPP, NamedFieldPuns
+  default-extensions: CPP, OverloadedStrings, NamedFieldPuns
   }
 
 test-suite test-miniutter
@@ -80,4 +80,6 @@ test-suite test-miniutter
   ghc-options:        -Wall -Wcompat -Worphans -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-home-modules -Widentities -Wredundant-constraints
   ghc-options:        -Wall-missed-specialisations
   ghc-options:        -fno-ignore-asserts -fexpose-all-unfoldings -fspecialise-aggressively
+  } else {
+  default-extensions: CPP, OverloadedStrings, NamedFieldPuns
   }
