--- a/miniutter.cabal
+++ b/miniutter.cabal
@@ -5,7 +5,7 @@ name:          miniutter
 -- PVP summary:+-+------- breaking API changes
 --             | | +----- minor or non-breaking API additions
 --             | | | +--- code changes with no API change
-version:       0.5.0.0
+version:       0.5.0.1
 synopsis:      Simple English clause creation from arbitrary words
 description:   This library helps in generating simple present tense
                English sentences from short, parametrized descriptions.
@@ -20,7 +20,7 @@ homepage:      https://github.com/Mikolaj/miniutter
 bug-reports:   https://github.com/Mikolaj/miniutter/issues
 license:       BSD3
 license-file:  LICENSE
-tested-with:   GHC >= 7.4 && <= 8.6
+tested-with:   GHC >= 7.8 && <= 8.6
 data-files:    LICENSE, README.md
 author:        Mikolaj Konarski
 maintainer:    Mikolaj Konarski <mikolaj.konarski@funktory.com>
@@ -34,7 +34,7 @@ source-repository head
 
 library
   exposed-modules:    NLP.Miniutter.English
-  build-depends:      base                 >= 4        && < 5,
+  build-depends:      base                 >= 4.7      && < 5,
                       binary               >= 0.6.3.0  && < 1,
                       text                 >= 0.11.2.3 && < 2,
                       containers           >= 0.4.1    && < 1,
@@ -61,9 +61,9 @@ test-suite test-miniutter
   main-is:            test-miniutter.hs
   hs-source-dirs:     test
   build-depends:      miniutter,
-                      base                 >= 4        && < 5,
-                      text                 >= 0.11.2.3 && < 2,
-                      containers           >= 0.4.1    && < 1,
+                      base,
+                      text,
+                      containers,
                       test-framework       >= 0.6      && < 1,
                       test-framework-hunit >= 0.2      && < 1,
                       HUnit                >= 1.2      && < 2
