--- a/miniutter.cabal
+++ b/miniutter.cabal
@@ -38,7 +38,7 @@ library
                       binary               >= 0.6.3.0  && < 1,
                       text                 >= 0.11.2.3,
                       containers           >= 0.4.1    && < 1,
-                      minimorph            >= 0.3.0.0  && < 1
+                      minimorph            >  0.3.0.1  && < 1
   if !impl(ghc >= 8.0)
     build-depends: semigroups == 0.18.*
 
